# Othello-AlphaZero

./: .gitignore  README.md
cpp/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  pyproject.toml
cpp/src/include/: mcts.h  neural_net.h  neural_net_wrapper.h  position.h  position_iterator.h  queue.h  search_node.h  search_thread.h  self_play.h  transformation.h  utility.h
cpp/src/lib/: mcts.cpp  neural_net_wrapper.cpp  othello_mcts.cpp  position.cpp  search_thread.cpp  self_play.cpp  utility.cpp
cpp/src/othello_mcts/: __init__.py  _othello_mcts_impl.pyi
images/: mcts.dot
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
python/cpp/: .clang-format  Doxyfile
python/cpp/include/: neural_net_input_thread.h  neural_net_output_thread.h  position.h  position_evaluation.h  search_node.h  search_tree_base.h  search_tree_for_deployment.h  search_tree_for_self_play.h  thread_safe_queue.h
python/cpp/lib/: neural_net_input_thread.cpp  neural_net_output_thread.cpp  position_evaluation.cpp  search_tree_base.cpp  search_tree_for_self_play.cpp
python/othello_alpha_zero/: greedy_player.pyx  mcts_player.pyx  mutex.pxd  othello.pxd  othello.pyx  resnet.py  train.py  utility.pxd  utility.pyx
python/othello_alphazero/: evaluation.py  neural_net.py  play.py  player.py  train.py
web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: AlphaZeroSettingsDialog.tsx  App.tsx  IntInput.tsx  PlayerPicker.tsx  PlayerSettings.ts  appReducer.ts  index.html  index.scss  index.tsx
