[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "othello-mcts"
version = "2025.0.0"
dependencies = []
requires-python = ">=3.10"
authors = [{ name = "Yunhao Qian", email = "yunhaoq@seas.upenn.edu" }]
description = "Python bindings for Monte Carlo Tree Search in Othello."
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Homepage = "https://github.com/yunhao-qian/Othello-AlphaZero"
