[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "othello-mcts"
version = "2025.1.0"
dependencies = []
requires-python = ">=3.10"
authors = [{ name = "Yunhao Qian", email = "yunhaoq@seas.upenn.edu" }]
description = "Monte Carlo Tree Search for Othello."
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Homepage = "https://github.com/yunhao-qian/Othello-AlphaZero"

[tool.scikit-build]
minimum-version = "build-system.requires"
build.verbose = true
logging.level = "INFO"
