[build-system]
requires = ["scikit-build-core >=0.10.0", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "othello-mcts"
version = "2025.2.0"
dependencies = []
requires-python = ">=3.10"
authors = [{ name = "Yunhao Qian", email = "yunhaoq@seas.upenn.edu" }]
description = "Monte Carlo Tree Search for Othello."
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Homepage = "https://github.com/yunhao-qian/Othello-AlphaZero"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core.
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build.verbose = true

# Build stable ABI wheels for CPython 3.12+.
wheel.py-api = "cp312"

logging.level = "INFO"
